--- a/src/Cactus.Blade.Repository/Cactus.Blade.Repository.csproj
+++ b/src/Cactus.Blade.Repository/Cactus.Blade.Repository.csproj
@@ -13,6 +13,10 @@
     <RepositoryType>git</RepositoryType>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageIcon>cactus.png</PackageIcon>
+    <RepositoryUrl>https://github.com/Cactus-Blade/Cactus.Blade.Repository</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Cactus-Blade/Cactus.Blade.Repository</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,6 +24,17 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.AutoHistory" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.3" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\images\cactus.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
