--- a/src/Cactus.Blade.Repository/Cactus.Blade.Repository.csproj
+++ b/src/Cactus.Blade.Repository/Cactus.Blade.Repository.csproj
@@ -20,6 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cactus.Blade.Core" Version="1.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.AutoHistory" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.3" />
